<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.mobiloitte.friendsierunnerapp.viewModel.ActivityPasswordReMessageViewModel" />
    </data>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/drakB"
        tools:context=".Password_rec_overed">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_height="wrap_content">

            <ImageView android:layout_width="wrap_content"
                android:background="@mipmap/fblogo"
                android:text="@string/vp"
                android:gravity="center"
                android:layout_gravity="center"

                android:layout_height="wrap_content"/>



            <TextView android:layout_width="wrap_content"
                android:text="@string/request_passcode"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:layout_height="wrap_content"/>


            <TextView android:layout_width="wrap_content"
                android:text="@string/please_check_your_email_for_a_like_from"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_55sdp"
                android:layout_gravity="center"
                android:textSize="@dimen/_15sdp"
                android:layout_height="wrap_content"/>


            <TextView android:layout_width="wrap_content"
                android:text="@string/friend_park_that_will_allow_you_to"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="@dimen/_13sdp"
                android:layout_height="wrap_content"/>


            <TextView android:layout_width="wrap_content"
                android:text="@string/change_your_passcode"

                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="@dimen/_13sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <Button android:layout_width="match_parent"
            android:text="@string/login"
            android:id="@+id/btlogin"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:background="@color/origene"
            android:textSize="@dimen/_13sdp"
            android:layout_height="@dimen/_50sdp"
            />


    </RelativeLayout>
</layout>