<?xml version="1.0" encoding="utf-8"?><layout>
    <data>
        <variable
            name="viewModel"
            type="com.mobiloitte.friendsierunnerapp.viewModel.ActivityEnterCodeViewModel" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/verify_mobile"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/ivBack"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/iv_back_edit_phoneno"
                    android:layout_width="@dimen/_25sdp"
                    android:background="@drawable/ic_forgotpass_arrowback"
                    android:layout_height="@dimen/_25sdp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/verify_mobile_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/dull_color"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_height="@dimen/_1sdp"/>

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:src="@drawable/verify_number_image"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_height="@dimen/_80sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:singleLine="false"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/your_code_has_been_sent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:singleLine="false"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/enter_the_code_below_to_complete_verification"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvverifyCodeError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/enter_password"
                    android:textColor="@color/red"
                    android:gravity="center"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/etCode"
                    android:layout_width="@dimen/_160sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:hint="@string/_32532"
                    android:inputType="number"
                    android:gravity="center"
                    android:maxLength="5"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_25ssp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/bg1_color"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/tv_verify_code"
                    android:layout_width="@dimen/_150sdp"
                    android:text="@string/verify_code"

                    android:layout_marginTop="@dimen/_6sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/thisismycar_box"
                    android:layout_height="@dimen/_45sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:layout_height="match_parent">



                </LinearLayout>

            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_40sdp"

            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:singleLine="false"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"

                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/don_t_recieve_your_code_via_text"
                android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@drawable/edit_number_box"
                android:layout_height="@dimen/_40sdp">
                <TextView
                    android:id="@+id/tvEditNumber"
                    android:layout_width="match_parent"
                    android:text="@string/edit"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="match_parent"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:background="@drawable/edit_number_box"
                android:layout_height="@dimen/_40sdp">
                <TextView
                    android:id="@+id/tvResendCode"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/resend"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        </LinearLayout>


    </RelativeLayout></layout>