<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.mobiloitte.friendsierunnerapp.viewModel.ActivityForgotPasswordViewModel" />
    </data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_box"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <ImageView
            android:id="@+id/iv_forgot_back_arrow"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_forgotpass_arrowback" />

        <ImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/log_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/forgot_passcode"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_gravity="center"
            android:orientation="vertical">


        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/red"
            android:visibility="gone"
            android:textSize="@dimen/_10sdp" />
        <EditText
            android:id="@+id/et_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="@color/dull_color"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:maxLength="50"

            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_15ssp"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_3sdp"
            android:text="@string/email_address"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/red_color"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />
</RelativeLayout>
</layout>