<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.mobiloitte.friendsierunnerapp.viewModel.FragmentEditProfileViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0f5868">


        <!--<LinearLayout android:layout_width="match_parent"-->
        <!--android:background="@color/darkBule"-->
        <!--android:padding="@dimen/_25sdp"-->
        <!--android:orientation="vertical"-->
        <!--android:id="@+id/back"-->
        <!--android:layout_height="wrap_content">-->

        <!--<ImageView android:layout_width="@dimen/_25sdp"-->
        <!--android:background="@drawable/ic_keyboard_backspace_black_24dp"-->
        <!--android:layout_height="@dimen/_25sdp"/>-->
        <!--<TextView android:layout_width="wrap_content"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="@dimen/_20sdp"-->
        <!--android:textStyle="bold"-->
        <!--android:layout_marginTop="@dimen/_25sdp"-->
        <!--android:text="@string/my_profile"-->
        <!--android:layout_height="wrap_content"/>-->

        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/back"
            android:orientation="vertical"
            android:padding="80dp"
            tools:ignore="UnknownId">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/profilw"

                />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/white"
                android:text="@string/miranda_terrell"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/miranda_friendsiepark_com"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="*********************"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                 android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/_404_307_7040"
                android:id="@+id/tv_phone_no"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:background="@color/darkBule1"
            android:text="@string/edit_pofile"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>
</layout>